# inviwo

./: .gitmodules  CMakeLists.txt  Jenkinsfile
cmake/: globalconfig.cmake
include/inviwo/core/processors/: processortags.h
include/inviwo/core/properties/: planeproperty.h  volumeindicatorproperty.h
modules/base/processors/: volumeslice.cpp
modules/basegl/processors/imageprocessing/: imagelayoutgl.h
modules/cimg/: CMakeLists.txt  depends.cmake
modules/hdf5/: CMakeLists.txt
modules/hdf5/processors/: hdf5volumesource.cpp
modules/plotting/properties/: axisproperty.h
modules/python3/: depends.cmake
modules/python3/interface/: pyproperties.cpp
src/core/properties/: planeproperty.cpp  volumeindicatorproperty.cpp
